fix: Remove bleeding css and observable memory leaks

--- a/src/components/float.module.scss
+++ b/src/components/float.module.scss
@@ -1,4 +1,5 @@
 .frame {
+  background: rgb(253, 253, 253);
   border: 1px solid #999;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   position: fixed;
