--- a/src/components/root.module.scss
+++ b/src/components/root.module.scss
@@ -1,7 +1,6 @@
 $font-stack: "Segoe UI", sans-serif;
 
-:root {
-  background: rgb(253, 253, 253);
+.wrapper {
   box-sizing: border-box;
   font-family: $font-stack;
   font-size: 13px;
